// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Bubble component attribute asker bubble renders properly 1`] = `
<div>
  <div
    class="xonomyBubble nerd"
    style="left: 0px; top: 0px; display: block;"
  >
    <div
      class="inside"
    >
      <div
        class="xonomyBubbleContent"
      >
        <form>
          <input
            aria-label="Value"
            class="textbox focusme"
            name="val"
            value="value"
          />
          <input
            type="submit"
            value="OK"
          />
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bubble component attribute asker bubble should be empty 1`] = `<div />`;

exports[`Bubble component attribute menu bubble renders properly 1`] = `
<div>
  <div
    class="xonomyBubble nerd"
    style="left: 0px; top: 0px; display: block;"
  >
    <div
      class="inside"
    >
      <div
        class="xonomyBubbleContent"
      >
        <div
          class="menu"
        >
          <div
            class="menuItem focusme"
          >
            Delete this attribute
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bubble component attribute menu bubble should be empty 1`] = `<div />`;

exports[`Bubble component bubble should not render if id is invalid 1`] = `<div />`;

exports[`Bubble component captions should be correctly formatted 1`] = `
<div>
  <div
    class="xonomyBubble nerd"
    style="left: 0px; top: 0px; display: block;"
  >
    <div
      class="inside"
    >
      <div
        class="xonomyBubbleContent"
      >
        <div
          class="menu"
        >
          <div
            class="menuItem focusme"
          >
            <span
              class="icon"
            >
              <img
                src="icon.png"
              />
            </span>
            <span
              class="techno"
            >
              <span
                class="punc"
              >
                &lt;
              </span>
              <span
                class="elName"
              >
                element 
              </span>
              <span
                class="punc"
              >
                /
                &gt;
              </span>
            </span>
          </div>
          <div
            class="menuItem focusme"
          >
            <span
              class="techno"
            >
              <span
                class="atName"
              >
                key
              </span>
              <span
                class="punc equals"
              >
                =
              </span>
              <span
                class="punc"
              >
                "
              </span>
              <span
                class="atValue"
              >
                value
              </span>
              <span
                class="punc"
              >
                "
              </span>
            </span>
          </div>
          <div
            class="menuItem focusme"
          >
            <span
              class="techno"
            >
              <span
                class="atName"
              >
                key
              </span>
            </span>
          </div>
          <div
            class="menuItem focusme"
          >
            <span
              class="techno"
            >
              <span
                class="atName"
              >
                key
              </span>
              <span
                class="punc equals"
              >
                =
              </span>
              <span
                class="punc"
              >
                "
              </span>
              <span
                class="punc"
              >
                "
              </span>
            </span>
          </div>
          <div
            class="menuItem focusme"
          >
            <span
              class="techno"
            >
              <span
                class="punc"
              >
                "
              </span>
              <span
                class="atValue"
              >
                value
              </span>
              <span
                class="punc"
              >
                "
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bubble component element bubble renders properly 1`] = `
<div>
  <div
    class="xonomyBubble nerd"
    style="left: 0px; top: 0px; display: block;"
  >
    <div
      class="inside"
    >
      <div
        class="xonomyBubbleContent"
      >
        <div
          class="menu"
        >
          <div
            class="menuItem focusme"
          >
            Delete
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bubble component element bubble without menu renders properly 1`] = `<div />`;

exports[`Bubble component menu item should be hidden if hideIf() returns true 1`] = `
<div>
  <div
    class="xonomyBubble nerd"
    style="left: 0px; top: 0px; display: block;"
  >
    <div
      class="inside"
    >
      <div
        class="xonomyBubbleContent"
      >
        <div
          class="menu"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Bubble component should not render if "show" is false 1`] = `<div />`;

exports[`Bubble component text bubble renders properly 1`] = `
<div>
  <div
    class="xonomyBubble nerd"
    style="left: 0px; top: 0px; display: block;"
  >
    <div
      class="inside"
    >
      <div
        class="xonomyBubbleContent"
      >
        <form>
          <textarea
            class="textbox focusme"
            name="val"
          >
            value
          </textarea>
          <div
            class="submitline"
          >
            <input
              type="submit"
              value="OK"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
